Adds a really simple support for group queries